# nyanpasu

./: .gitignore  .lintstagedrc.js  .prettierignore  BUILD_INSTALLER.md  BUILD_WINDOWS_ON_LINUX.md  BUILD_WINDOWS_WSL.md  CHANGELOG.md  IMPROVEMENT_TODOLIST.md  README.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_SERVICE_DECOUPLING.md  eslint.config.js  package.json  pnpm-lock.yaml  tauri-signing.key.pub  历史代码改进列表.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/actions/setup-build-env/: action.yml
.github/workflows/: ci.yml  deps-build-linux.yaml  deps-build-macos.yaml  deps-build-windows-nsis.yaml  deps-create-updater.yaml  deps-message-telegram.yaml  macos-aarch64.yaml  target-release-build.yaml
.husky/: pre-commit
backend/: Cargo.toml
backend/boa_utils/: Cargo.toml
backend/boa_utils/src/module/: http.rs
backend/nyanpasu-egui/src/: ipc.rs
backend/nyanpasu-egui/src/utils/: svg.rs
backend/nyanpasu-egui/src/widget/: mod.rs  network_statistic_large.rs  network_statistic_small.rs
backend/tauri/: .gitignore  Cargo.toml  build.rs  shared-config.json  tauri.conf.json
backend/tauri-plugin-deep-link/src/: lib.rs  linux.rs  shared.rs  windows.rs
backend/tauri/overrides/: fixed-webview2.conf.json  nightly.conf.json
backend/tauri/resources/scripts/: nyanpasu-service.cmd  nyanpasu-service.ps1
backend/tauri/src/: feat.rs  ipc.rs  lib.rs  setup.rs  shutdown_hook.rs
backend/tauri/src/config/: draft.rs  runtime.rs
backend/tauri/src/config/clash/: mod.rs
backend/tauri/src/config/nyanpasu/: mod.rs
backend/tauri/src/config/profile/: builder.rs
backend/tauri/src/config/profile/item/: remote.rs
backend/tauri/src/core/: connection_interruption.rs  mod.rs  state.rs  storage.rs  sysopt.rs
backend/tauri/src/core/clash/: api.rs  core.rs  mod.rs  ws.rs
backend/tauri/src/core/privilege/: manager.rs  mod.rs  operations.rs  service_handler.rs  service_utils.rs  simple_service.rs
backend/tauri/src/core/service/: control.rs  ipc.rs  mod.rs
backend/tauri/src/core/state_v2/: builder.rs  coordinator.rs  manager.rs  mod.rs
backend/tauri/src/core/state_v2/manager/: persistent.rs
backend/tauri/src/core/tasks/: storage.rs  task.rs
backend/tauri/src/core/tasks/jobs/: logger.rs  mod.rs
backend/tauri/src/core/tray/: mod.rs  proxies.rs
backend/tauri/src/core/updater/: mod.rs  shared.rs
backend/tauri/src/enhance/: chain.rs  field.rs  tun.rs
backend/tauri/src/enhance/script/: js.rs
backend/tauri/src/enhance/script/lua/: mod.rs
backend/tauri/src/event_handler/: mod.rs
backend/tauri/src/utils/: candy.rs  config.rs  dialog.rs  dirs.rs  downloader.rs  error.rs  help.rs  mod.rs  open.rs  platform.rs  prelude.rs  resolve.rs  winreg.rs
backend/tauri/src/utils/init/: logging.rs  mod.rs
backend/tauri/templates/: installer.nsi
docs/: BUILD_WINDOWS_INSTALLER.md  CLASH_DATA_READINESS_TROUBLESHOOTING.md
frontend/: MIGRATION_GUIDE.md  UI_FRAMEWORK_CONSOLIDATION_PLAN.md
frontend/interface/: package.json
frontend/interface/src/hooks/: use-debounced-config.ts  (+1 more)
frontend/nyanpasu/: package.json  vite.config.ts
frontend/nyanpasu/src/: consts.ts  route-tree.gen.ts
frontend/ui/: package.json  tsconfig.json
frontend/utils/: package.json  tsconfig.json
frontend/utils/src/: index.ts
manifest/: version.json
scripts/: build-windows-installer-wsl.sh  build-windows-installer.ps1  build-windows-installer.sh  check-duplicates.ts  download-windows-sidecars.ts  fast-build.ps1  generate-git-info.ts  osx-aarch64-upload.ts  package.json  prepare-release.ts  prepare-unified.ts  setup-build-environment.ps1  shared-build-functions.psm1  telegram-notify.ts  updater-unified.ts
scripts/utils/: resource.ts
(+191 files in other folders)
