[workspace]
resolver = "2"
members = ["tauri", "boa_utils", "nyanpasu-macro", "nyanpasu-egui"]

[patch.crates-io]
tray-icon = { git = "https://github.com/tauri-apps/tray-icon.git", rev = "34a3442" }

[patch."https://github.com/LibNyanpasu/nyanpasu-utils.git"]
nyanpasu-utils = { git = "https://github.com/Alfred1109/nyanpasu-utils.git", rev = "4165ebfecccc5606f4a1abc0bbe847cd018123dd" }

[patch."https://github.com/libnyanpasu/nyanpasu-utils.git"]
nyanpasu-utils = { git = "https://github.com/Alfred1109/nyanpasu-utils.git", rev = "4165ebfecccc5606f4a1abc0bbe847cd018123dd" }

[workspace.package]
repository = "https://github.com/Alfred1109/clashnyanpasu.git"
edition = "2024"
license = "GPL-3.0"
authors = ["Alfred1109"]

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
boa_engine = { version = "0.20", features = ["annex-b"] }
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "json",
  "stream",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
nyanpasu-utils = { git = "https://github.com/Alfred1109/nyanpasu-utils.git", rev = "4165ebfecccc5606f4a1abc0bbe847cd018123dd", features = [
  "specta",
] }
test-log = { version = "0.2.16", features = ["trace"] }
tracing-test = { git = "https://github.com/Frando/tracing-test.git", rev = "e81ec65", features = [
  "no-env-filter",
  "pretty-log-printing",
] }
fs4 = { version = "0.13.1", features = ["fs-err3-tokio", "fs-err3"] }
fs-err = { version = "3.1.2", features = ["tokio"] }

[profile.release]
panic = "abort"
codegen-units = 16 # 从1增加到16，充分利用多核CPU
lto = "thin"       # 使用thin LTO，比full LTO快很多
opt-level = "z"    # 优化二进制大小
strip = true       # 移除调试符号减少大小

# 新增开发配置优化
[profile.dev]
opt-level = 1       # 轻微优化提升开发体验
debug = 1           # 减少调试信息生成时间
incremental = true  # 启用增量编译
codegen-units = 256 # 最大化并行编译

# 新增快速构建配置
[profile.fast-build]
inherits = "release"
codegen-units = 32   # 更激进的并行化
lto = false          # 禁用LTO获得更快构建速度
opt-level = 1        # 较低优化级别
